buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'com.github.ben-manes.versions' version '0.61.0'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.sonarqube' version '7.4.0.8496'
    id 'pl.allegro.tech.build.axion-release' version '1.21.3'
    id 'publishing'
}

repositories {
    mavenCentral()
}

scmVersion {
    tag {
        prefix = ''
    }
}

group = 'com.epages'

allprojects {
    project.version = scmVersion.version
}

subprojects {
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    repositories {
        mavenCentral()
    }

    plugins.withType(JavaPlugin).configureEach {
        java {
            sourceCompatibility = JavaVersion.VERSION_21
            targetCompatibility = JavaVersion.VERSION_21
        }
    }

    tasks.register('sourceJar', Jar) {
        from sourceSets.main.allJava
    }

    java {
        withSourcesJar()
        withJavadocJar()
    }

    javadoc {
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    jacocoTestReport {
        reports {
            xml.required = true
            html.required = true
        }
    }
    test.finalizedBy jacocoTestReport

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
        }
    }
}

sonarqube {
  properties {
    property "sonar.projectKey", "ePages-de_restdocs-wiremock"
    property "sonar.organization", "epages-de"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}
